fix a few minor harf bugs on safari

--- a/src/harf-src/src/stylesheets/footer.scss
+++ b/src/harf-src/src/stylesheets/footer.scss
@@ -1,160 +1,159 @@
-#footer{
-  height:10vw;
-  border-style: solid;
-  border-top-color: rgba(255, 255, 255, 0.25);
-  border-width: 0.5px;
+#footer {
+    height: 10vw;
+    border-style: solid;
+    border-top-color: rgba(255, 255, 255, 0.25);
+    border-width: 0.5px;
+    white-space: nowrap;
 }
 
 #company {
-  color: white;
-  font-family: iran-yekan, serif;
-  font-size: 0.9vw;
-  height:2.7777777777777777vh;
-  width:15.625vw;
-  direction: rtl;
+    color: white;
+    font-family: iran-yekan, serif;
+    font-size: 0.9vw;
+    height: 2.7777777777777777vh;
+    width: 15.625vw;
+    direction: rtl;
 }
 
 #footer-title {
-  color: white;
-  font-family: iran-yekan, serif;
-  font-size: 1vw;
+    color: white;
+    font-family: iran-yekan, serif;
+    font-size: 1vw;
 }
 
-#contact-text{
-  color: white;
-  font-family: iran-yekan, serif;
-  height:2.7777777777777777vh;
-  width:4.5vw;
-  font-size: 1vw;
-
+#contact-text {
+    color: white;
+    font-family: iran-yekan, serif;
+    height: 2.7777777777777777vh;
+    width: 4.5vw;
+    font-size: 1vw;
 }
 
-#join-text{
-  color: white;
-  font-family: iran-yekan, serif;
-  font-size: 1vw;
-  height:2.7777777777777777vh;
-  width:5.078125vw;
+#join-text {
+    color: white;
+    font-family: iran-yekan, serif;
+    font-size: 1vw;
+    height: 2.7777777777777777vh;
+    width: 5.078125vw;
 }
 
-#email{
-  color: white;
-  font-family: iran-yekan, serif;
-  font-size: 1.1vw;
-  height:3h;
-  margin-top: 1.6vh;
-  width:9.375vw;
+#email {
+    color: white;
+    font-family: iran-yekan, serif;
+    font-size: 1.1vw;
+    height: 3h;
+    margin-top: 1.6vh;
+    width: 9.375vw;
 }
 
-#icon-title-footer{
-  position: absolute;
-  display: flex;
-  margin-top:5vh;
-  margin-right:7.8125vw;
-  margin-left:87.109375vw;
-  justify-content: center;
-  align-items: center;
-  flex-direction: row;
-}
-
-#icon-footer{
-  height:2.8vw;
-  width:3.8vw;
-}
-
-#contact-footer{
-  position: absolute;
-  display: flex;
-  justify-content: space-between;
-  align-items: end;
-  flex-direction: column;
-  height:8.333333333333332vh;
-  width:4.5vw;
-  margin-top:4.6vh;
-  margin-right:58.59375vw;
-  margin-left:39.0625vw;
-}
-
-#email-footer{
-  position: absolute;
-  display: flex;
-  margin-right:74.21875vw;
-  height:9vh;
-  margin-top:4.861111111111112vh;
-  margin-left:10.546875vw;
-  justify-content: space-between;
-  align-items: end;
-  flex-direction: column;
-}
-
-a{
-  text-decoration: none;
-}
-
-#email:hover{
-  color: #26FF7B;
-}
-
-#contact-text:hover{
-  color: #26FF7B;
-}
-
-#join-text:hover{
-  color: #26FF7B;
-}
-
-@media screen and (max-width: 500px){
-  #contact-footer{
-    display: none;
-    margin: 0;
-    height: 0;
-    width: 0;
-  }
-
-  #footer{
-    border-style: none;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: end;
-  }
-
-  #email-footer{
+#icon-title-footer {
     position: absolute;
+    display: flex;
+    margin-top: 5vh;
+    margin-right: 7.8125vw;
+    margin-left: 87.109375vw;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+}
+
+#icon-footer {
+    height: 2.8vw;
+    width: 3.8vw;
+}
+
+#contact-footer {
+    position: absolute;
+    display: flex;
     justify-content: space-between;
     align-items: end;
-    margin-bottom: 15vh;
-    margin-right: 5vw;
-  }
+    flex-direction: column;
+    height: 8.333333333333332vh;
+    width: 4.5vw;
+    margin-top: 4.6vh;
+    margin-right: 58.59375vw;
+    margin-left: 39.0625vw;
+}
 
-  #icon-title-footer{
-    margin-bottom: 37vh;
-    position: relative;
+#email-footer {
+    position: absolute;
     display: flex;
-    flex-direction: row;
-  }
+    margin-right: 74.21875vw;
+    height: 9vh;
+    margin-top: 4.861111111111112vh;
+    margin-left: 10.546875vw;
+    justify-content: space-between;
+    align-items: end;
+    flex-direction: column;
+}
 
-  #footer-title{
-    font-size: 5vw;
-    padding-right: 1.4vw;
-  }
+a {
+    text-decoration: none;
+}
 
+#email:hover {
+    color: #26ff7b;
+}
 
-  #icon-footer{
-    height:4vh;
-    margin-bottom: 8vh;
-    width:15vw;
-  }
+#contact-text:hover {
+    color: #26ff7b;
+}
 
-  #email{
-    font-size: 4vw;
-    height:3.5211267605633805vh;
-    width:35vw;
-  }
+#join-text:hover {
+    color: #26ff7b;
+}
 
-  #company{
-    font-size: 3.5vw;
-    height:2.7777777777777777vh;
-    width:60vw;
-  }
+@media screen and (max-width: 500px) {
+    #contact-footer {
+        display: none;
+        margin: 0;
+        height: 0;
+        width: 0;
+    }
+
+    #footer {
+        border-style: none;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: end;
+    }
+
+    #email-footer {
+        position: absolute;
+        justify-content: space-between;
+        align-items: end;
+        margin-bottom: 15vh;
+        margin-right: 5vw;
+    }
+
+    #icon-title-footer {
+        margin-bottom: 37vh;
+        position: relative;
+        display: flex;
+        flex-direction: row;
+    }
+
+    #footer-title {
+        font-size: 5vw;
+        padding-right: 1.4vw;
+    }
+
+    #icon-footer {
+        height: 4vh;
+        margin-bottom: 8vh;
+        width: 15vw;
+    }
+
+    #email {
+        font-size: 4vw;
+        height: 3.5211267605633805vh;
+        width: 35vw;
+    }
+
+    #company {
+        font-size: 3.5vw;
+        height: 2.7777777777777777vh;
+        width: 60vw;
+    }
 }
